2012-05-27  Peter Bloomfield

	* src/main-window.c: use class methods instead of emitting
	signals.
	* src/main-window.h: define class getter.

2012-05-21  Peter Bloomfield

	* libbalsa/imap/md5-utils.c (md5_final): avoid gcc whining.

2012-04-22  Pawel Salek

	* src/balsa-app.{c,h}: free mem on exit. Longer 'short' mailbox names.
	* src/balsa-mblist.c: use them.
	* src/mailbox-node.h: remove unused bit field.
	* src/main-window.c: check_mailboxes must be called from main thread.

2012-04-20  Peter Bloomfield

	* src/main-window.c: hide current message immediately, instead
	of in the idle callback; use gdk_threads_add_idle convenience
	function.
	* src/balsa-message.c (balsa_message_set): message is already
	hidden.

2012-04-19  Peter Bloomfield

	* libbalsa/body.c (libbalsa_message_body_get_pixbuf): apply
	embedded orientation to pixbuf.

2012-04-16  Peter Bloomfield

	* src/balsa-mblist.c (balsa_mblist_mru_add): add folder to the
	MRU folder list as well as to the given list, if different.

2012-04-16  Peter Bloomfield

	Revert previous commit; fixes
	<URL:http://mail.gnome.org/archives/balsa-list/2012-April/msg00003.html>
	from Ildar Mulyukov

	* src/balsa-app.c (balsa_app_init):
	* src/balsa-app.h:
	* src/save-restore.c (config_mailbox_set_as_special),
	(config_global_load), (config_save):
	* src/sendmsg-window.c (create_info_pane):

2012-03-27  Peter Bloomfield

	Use a single MRU folder list

	* src/balsa-app.h: drop separate Fcc list.
	* src/balsa-app.c (balsa_app_init): ditto.
	* src/save-restore.c (config_mailbox_set_as_special): use
	combined list;
	(config_global_load), (config_save): do not save and restore
	separate Fcc list.
	* src/sendmsg-window.c (create_info_pane): use combined list.

2012-03-27  Peter Bloomfield

	Remember geometry of MRU mailbox tree

	* src/balsa-app.h: new members mru_tree_{width,height}
	* src/balsa-mblist.c (bmbl_mru_size_allocate_cb): save them when
	the dialog's size is changed;
	(bmbl_mru_show_tree): use the saved values.